@@ -19,7 +19,7 @@ package org.apache.trevni;
 
 /** The datatypes that may be stored in a column. */
 public enum ValueType {
-  NULL, INT, LONG, FIXED32, FIXED64, FLOAT, DOUBLE, STRING, BYTES;
+  NULL, BOOLEAN, INT, LONG, FIXED32, FIXED64, FLOAT, DOUBLE, STRING, BYTES;
   private String name;
   private ValueType() { this.name = this.name().toLowerCase(); }
 
